# helixos

./: .cursorrules  .env.example  .gitignore  AGENTS.md  API_CONTRACTS.md  DOMAIN_GLOSSARY.md  README.md  SCHEMA_GUIDE.md  SESSION_HANDOVER.md  SYSTEM_ARCHITECTURE.md  docker-compose.yml  package-lock.json  package.json
agents/: module_scaffold.md
docs/: OVERVIEW.md  README.md
mcp/: registry.json
prompts/: eln_copilot.md
scripts/: dev-api.sh  dev-desktop.sh  setup-dev.sh  (+1 more)
services/api/: pyproject.toml
services/api/helixos/: __init__.py  errors.py  main.py
services/api/helixos/ai/: __init__.py  models.py  router.py  schemas.py  service.py  settings.py
services/api/helixos/ai/providers/: __init__.py  base.py  openai_compatible.py  stub.py  vertex.py
services/api/helixos/audit/: __init__.py  hash_chain.py  memory_store.py  models.py  orm.py  router.py  schemas.py  service.py  sql_store.py  stores.py
services/api/helixos/auth/: __init__.py  models.py  router.py  schemas.py  service.py
services/api/helixos/db/: base.py  session.py  settings.py
services/api/helixos/eln/: __init__.py  router.py  schemas.py  service.py
services/api/helixos/mcp/: __init__.py  router.py  schemas.py  service.py
services/api/helixos/modules/: __init__.py  router.py
services/api/helixos/molecular/: __init__.py  models.py  router.py  schemas.py  service.py
services/api/scripts/: bootstrap_embedded_python_env.py  build_desktop_binaries.py  fetch_embedded_python.py  run_sidecar.py
services/api/tests/: test_ai_providers.py  test_api.py  test_audit.py  test_hash_chain.py
(+50 files in other folders)
