[project]
name = "helixos-api"
version = "0.1.0"
description = "FastAPI backend for HelixOS."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.7.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]
desktop = [
  "pyinstaller>=6.10.0"
]
vertex = [
  "google-genai>=1.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
